# AlfiePrimeSSClient

./: README.md  install.bat  install.sh  pyproject.toml  uninstall.bat
alfieprime_musiciser/: __init__.py  __main__.py  colors.py  config.py  dj_mixer.py  dj_state.py  gui.py  launcher.py  main.py  mpris.py  receiver.py  renderer.py  setup_wizard.py  shared_pcm.py  shared_state.py  smtc.py  state.py  stats.py  tui.py  tui_animations.py  tui_dj.py  tui_process.py  tui_settings.py  updater.py  visualizer.py
alfieprime_musiciser/airplay/: __init__.py  receiver.py
alfieprime_musiciser/spotify/: __init__.py  event_script.py  event_script.sh  receiver.py
