[project]
name = "alfieprime-musiciser"
version = "0.1.0"
description = "Party-themed SendSpin receiver with boom box UI and audio visualizer"
requires-python = ">=3.12"
dependencies = [
    "sendspin>=0.12.0",
    "numpy>=1.24.0",
    "rich>=13.0.0",
    "Pillow>=10.0.0",
    "dbus-next>=0.2.3; sys_platform == 'linux'",
]

[project.scripts]
alfieprime-musiciser = "alfieprime_musiciser.main:main"

[project.gui-scripts]
alfieprime-musiciser-app = "alfieprime_musiciser.launcher:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
