[project]
name = "alfieprime-musiciser"
version = "1.7.6"
description = "Party-themed AirPlay 2 and SendSpin receiver with boom box UI and audio visualizer"
requires-python = ">=3.12"
dependencies = [
    "sendspin>=0.12.0",
    "numpy>=1.24.0",
    "rich>=13.0.0",
    "Pillow>=10.0.0",
    "dbus-next>=0.2.3; sys_platform == 'linux'",
    # AirPlay 2 receiver deps (gracefully disabled if install fails)
    "av>=10.0.0",
    "pyaudio>=0.2.13",
    "pycryptodome>=3.18.0",
    "biplist>=1.0.3",
    "netifaces>=0.11.0",
    "srptools>=1.0.1",
    "hkdf>=0.0.3",
    "cryptography>=41.0.0",
    "zeroconf>=0.80.0",
    # Spotify Connect deps
    "spotipy>=2.23.0",
]

[project.urls]
Homepage = "https://github.com/AlfiePRIME/AlfiePRIME-Musiciser"

[project.optional-dependencies]
smtc = ["winsdk>=1.0.0b10"]

[project.scripts]
alfieprime-musiciser = "alfieprime_musiciser.main:main"

[project.gui-scripts]
alfieprime-musiciser-app = "alfieprime_musiciser.launcher:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
